# Throughlin_app

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-image.yml  frontend-deploy.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/admin/: router.py  schemas.py
backend/app/api/ask/: router.py
backend/app/api/brief/: router.py
backend/app/api/see/: router.py  schemas.py
backend/app/core/: audit.py  auth.py  config.py  db.py  errors.py  otel.py  tenant.py
backend/app/domain/: __init__.py  audit_log.py  base.py  decisions.py  ingestion_runs.py  initiatives.py  people.py  signals.py
backend/seed/: count.py  load.py
backend/tests/: conftest.py
backend/tests/unit/: test_health.py
docs/: architecture.md  data-model.md  inference.md  integrations.md  runbook.md  security.md
docs/decisions/: 0001-bootstrap-phase-0-scope.md  0002-ephemeral-aws-stack.md
frontend/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx  PageHeader.tsx  StatusPill.tsx
frontend/src/features/admin/: AdminPage.tsx
frontend/src/features/ask/: AskPage.tsx
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/brief/: BriefPage.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/see/: DecisionsPage.tsx  InitiativeDetailPage.tsx  InitiativesPage.tsx  PeoplePage.tsx  SignalsPage.tsx
frontend/src/lib/: api.ts  auth.ts  config.ts
