[project]
name = "companybrain-backend"
version = "0.1.0"
description = "Company Brain Phase 0 backend (FastAPI)."
requires-python = ">=3.12"
dependencies = [
    # HTTP
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",

    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",            # runtime: async driver for the app
    "psycopg[binary]>=3.2",     # alembic migrations only (sync driver)
    "alembic>=1.14",
    "pgvector>=0.3.6",

    # Config & secrets
    "pydantic-settings>=2.6",
    "boto3>=1.35",

    # Auth (Cognito JWT verification)
    "pyjwt[crypto]>=2.9",

    # OpenTelemetry (ADOT-compatible OTLP export)
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "ASYNC", "S"]
ignore = ["S101"]  # pytest uses assert

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # tests use fake passwords

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
